# lambda-powertools-reference-prod-scaffold-part-two

./: .bandit  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  app.py  cdk.json  cliff.toml  llms.txt  package-lock.json  package.json  pyproject.toml  zensical.toml
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
.claude/skills/wa-review/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  dependency-audit.yml  docs.yml  pr-title.yml  release.yml  scorecard.yml
agent-sops/: ship-a-change.sop.md
docs/: backend_app.md  cdk_stack.md  hello_world_app.md  hello_world_frontend_stack.md  hello_world_waf_stack.md  index.md  nag_utils.md  openapi.json
docs/superpowers/plans/: 2026-07-10-ci-cd-pipeline.md
frontend/: index.html
hello_world/: feature_flags.json  hello_world_app.py  hello_world_frontend_stack.py  hello_world_stack.py  hello_world_stage.py  hello_world_waf_stack.py  nag_utils.py
infrastructure/: app_stage.py  audit_stack.py  backend_app.py  backend_stack.py  data_stack.py  frontend_stack.py  hello_world_app.py  hello_world_audit_stack.py  hello_world_data_stack.py  hello_world_frontend_stack.py  hello_world_stack.py  hello_world_stage.py  hello_world_waf_stack.py  nag_utils.py  pipeline_stack.py  validation_aspects.py  waf_stack.py
infrastructure/bootstrap/: cdk-scaffold-boundary.json
lambda/: app.py  models.py  requirements.txt  service.py
scripts/: audit_account.sh  deps_merge.sh  generate_openapi.py
tests/: conftest.py
tests/cdk/: test_bootstrap_boundary.py  test_pipeline_stack.py  test_snapshots.py  test_stacks.py  test_stage.py  test_validation_aspects.py
tests/cdk/snapshots/: ServerlessAppAudit-us-east-1.json  ServerlessAppBackend-us-east-1.json  ServerlessAppData-us-east-1.json  ServerlessAppFrontend-us-east-1.json  ServerlessAppPipeline.json  ServerlessAppWaf-us-east-1.json
tests/integration/: test_api_gateway.py  test_frontend.py
tests/unit/: conftest.py  test_feature_flags_schema.py  test_handler.py
